--- a/GcSite.BackSys.UI/Views/Consult/Type.cshtml
+++ b/GcSite.BackSys.UI/Views/Consult/Type.cshtml
@@ -320,6 +320,13 @@
             $('#btn-add').click(function () {
 
             })
+            //监听单元格编辑
+            table.on('edit(consult_type)', function (obj) {
+                var value = obj.value //得到修改后的值
+                    , data = obj.data //得到所在行所有键值
+                    , field = obj.field; //得到字段
+                layer.msg('[ID: ' + data.id + '] ' + field + ' 字段更改为：' + value);
+            });
             //监听工具条
             table.on('tool(consult_type)', function (obj) {
                 var data = obj.data;
